# packaging-demo

./: .gitignore  pyproject.toml
src/example_package_tj.egg-info/: PKG-INFO  SOURCES.txt
